Updated openapi and added db settings
