# src/main/java/com/quarkus/smartbackoffice/controllers/TablesController.java
@@ -1,42 +1,54 @@
 package com.quarkus.smartbackoffice.controllers;
 
+import com.quarkus.smartbackoffice.persistence.entity.Table;
 import com.quarkus.smartbackoffice.provider.controllers.TablesApi;
-import com.quarkus.smartbackoffice.provider.models.Table;
+import com.quarkus.smartbackoffice.provider.models.GeneratedTable;
+import com.quarkus.smartbackoffice.services.TableService;
 import io.smallrye.common.annotation.NonBlocking;
+import jakarta.inject.Inject;
 import jakarta.ws.rs.core.Response;
 import lombok.RequiredArgsConstructor;
+import lombok.val;
 
 import java.net.URI;
 import java.util.List;
 
 @RequiredArgsConstructor
-@NonBlocking
+// @NonBlocking
 public class TablesController implements TablesApi {
 
-    private final Table table = Table.builder().number(1).build();
+    @Inject
+    private final TableService tableService;
 
     @Override
-    public Response tablesGet() {
-        return Response.ok(List.of(table)).build();
+    public Response allTables() {
+        return Response.ok(List.of(tableService.tablesGet())).build();
     }
 
     @Override
-    public Response tablesPost(final Table table) {
-        return Response.created(URI.create("todo")).build();
+    public Response createTable(final GeneratedTable generatedTable) {
+        val table = Table.builder()
+                .name(generatedTable.getName())
+                .seatCount(generatedTable.getSeatCount())
+                .active(generatedTable.getActive())
+                .build();
+        val persistedTable = tableService.persist(table);
+
+        return Response.created(URI.create("/tables/" + persistedTable.getId())).build();
     }
 
     @Override
-    public Response tablesTableIdDelete(final String tableId) {
-        return Response.ok().build();
+    public Response deleteTable(final Long tableId) {
+        return Response.ok().build();}
+
+
+    @Override
+    public Response oneTable(final Long tableId) {
+        return Response.ok(tableService.tablesGet()).build();
     }
 
     @Override
-    public Response tablesTableIdGet(final String tableId) {
-        return Response.ok(table).build();
-    }
-
-    @Override
-    public Response tablesTableIdPut(final String tableId, final Table table) {
+    public Response updateTable(final Long tableId, final GeneratedTable table) {
         return Response.ok().build();
     }
 }
